CHANGES.txt - 2008-06-25
------------------------

CHANGES IN CUPS V1.4b1

	- The USB backend now uses libusb when available (STR #1575)
	- Added ppdLocalizeAttr function to get the localized version
	  of an attribute.
	- MIME types now support a priority() attribute (STR #2719)
	- The standard MIME types are now installed in
	  DataDir/mime (STR #2719)
	- The lpoptions command now describes custom options and
	  the necessary parameters (STR #2660)
	- The ppdmerge program did not support Simplified Chinese
	  or Traditional Chinese language version strings (STR #2851)
	- The PPD compiler now supports localizable attributes
	  (STR #2738)
	- The ppdpo utility now includes cupsIPPReasons values in
	  the message catalogs it generates (STR #2754)
	- The PPD compiler now supports conditional directives
	  (STR #2636)
	- The ppdc utility now supports a "-t" option to test PPD
	  files (STR #2739)
	- The ppdc utility now supports a "-m" option to use the
	  ModelName value as the output filename.
	- The ppdc utility now supports a FileName directive to
	  set an alternate output filename (STR #2740)
	- The side-channel API now supports SNMP queries for the
	  standard network backends.
	- Added a PageLogFormat directive to the cupsd.conf file to
	  control the format of lines in the page_log file.
	- Filters can now send PPD: messages to stderr to set PPD
	  keywords like DefaultPageSize while a job is printing.
	- Added a mdns backend for discovery and printing to printers
	  that advertise themselves via DNS-SD (Bonjour)
	- The ipp, lpd, and socket backends now support DNS-SD service
	  name resolution.
	- The scheduler now uses a single shared file descriptor for
	  all DNS-SD registrations (STR #2674)
	- The ipp, lpd, and socket backends now support SNMP-based
	  page accounting and supply level monitoring (STR #1655)
	- Added support for cupsPJLDisplay attribute to control what
	  PJL commands are used to display the job information.